<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2021. Yash Kasera
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_groups"
        android:icon="@drawable/ic_whatsapp"
        android:title="@string/title_chats" />

    <item
        android:id="@+id/navigation_direct"
        android:icon="@drawable/ic_direct_chat"
        android:title="@string/title_direct" />

    <item
        android:id="@+id/navigation_storage"
        android:icon="@drawable/ic_baseline_storage_24"
        android:title="@string/title_storage" />
    <item
        android:id="@+id/navigation_more_options"
        android:icon="@drawable/ic_baseline_menu_24"
        android:title="@string/title_more_options" />

</menu>