<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2021. Yash Kasera
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_info"
        android:icon="@drawable/ic_baseline_info_24"
        android:title="@string/info"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_grid"
        android:icon="@drawable/ic_baseline_list_24"
        android:title="@string/view_as"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_share"
        android:title="@string/share" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_baseline_delete_outline_24"
        android:title="@string/delete" />
    <item
        android:id="@+id/action_select_all"
        android:checkable="true"
        android:title="@string/select_all"
        app:showAsAction="withText" />
</menu>