<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2021. Yash Kasera
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.KeywordsFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/enable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:checked="true"
                android:text="@string/enable_filter"
                android:visibility="gone" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_medium"
                android:visibility="gone">

                <RadioButton
                    android:id="@+id/FILTER_ALL_LINKS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_all_links" />

                <RadioButton
                    android:id="@+id/FILTER_ALL_EXCEPT_BLACKLISTED"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_all_except_blacklisted" />

                <RadioButton
                    android:id="@+id/FILTER_ONLY_WHITELISTED_LINKS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_only_whitelisted" />

                <RadioButton
                    android:id="@+id/FILTER_NO_LINKS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_filter_links" />

            </RadioGroup>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="@dimen/margin_small"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:text="@string/whitelisted"
                    android:textAppearance="@style/heading2"
                    android:textColor="@color/color_6" />

                <TextView
                    android:id="@+id/all1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/all_links"
                    android:textAlignment="center"
                    android:textAppearance="@style/body1"
                    android:visibility="gone" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/whitelist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@android:layout/simple_list_item_1" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="@dimen/margin_small"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:text="@string/blacklisted"
                    android:textAppearance="@style/heading2"
                    android:textColor="#E57373" />

                <TextView
                    android:id="@+id/all2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/all_links"
                    android:textAlignment="center"
                    android:textAppearance="@style/body1"
                    android:visibility="gone" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/blacklist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@android:layout/simple_list_item_1" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/margin_medium"
        android:src="@android:drawable/ic_input_add" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>